--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:HA81IFuVXi/mlr6/OTHcwbMbfm6THoc2m0FRbkT/MH8=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -9,9 +9,17 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=main
 DB_USERNAME=root
 DB_PASSWORD=
+
+DB_CONNECTION2=mysql
+DB_DATABASE2=company1
+
+
+DB_CONNECTION3=mysql
+DB_DATABASE3=company2
+
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
